--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "vue2-vite",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "serve": "vite preview"
   },
   "dependencies": {
     "vite-plugin-vue2": "^1.4.0",
@@ -14,17 +11,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@storybook/addon-actions": "^6.5.0-beta.1",
-    "@storybook/addon-essentials": "^6.5.0-beta.1",
-    "@storybook/addon-interactions": "^6.5.0-beta.1",
-    "@storybook/addon-links": "^6.5.0-beta.1",
-    "@storybook/builder-vite": "^0.1.30",
-    "@storybook/testing-library": "^0.0.11",
-    "@storybook/vue": "^6.5.0-beta.1",
     "babel-loader": "^8.2.5",
-    "storybook-builder-vite-vue2": "^0.1.30",
     "vite": "^2.0.5",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14"
+  },
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/think2cat/vue2-vite.git"
   }
 }
