--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "vite-plugin-vue2": "^1.4.0",
-    "vue": "^2.6.12"
+    "vue": "^2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "babel-loader": "^8.2.5",
+    "less": "^4.2.0",
     "vite": "^2.0.5",
-    "vue-loader": "^15.9.8",
+    "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.6.14"
   },
   "license": "UNLICENSED",
